<resources>
    <string name="app_name">Amabam</string>
    <string name="game_one">Hangman</string>
    <string name="game_two">Wordle</string>
    <string name="game_three">Square Colors</string>
    <string name="square_reset">Reset</string>
    <string name="square_save">Save</string>
    <string name="hangman_reset">Reset</string>
    <string name="hangman_save">Save</string>
    <string name="categories_animals">Animals</string>
    <string name="categories_fruits">Fruits</string>
    <string name="categories_flowers">Flowers</string>
    <string name="categories_countries">Countries</string>
    <string name="categories_colors">Colors</string>
    <string name="categories_random">Random</string>
    <string name="wordle_enter">Enter</string>
    <string name="login_username">Username</string>
    <string name="register_username">Username</string>
    <string name="login_password">Password</string>
    <string name="register_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

</resources>