<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.categories_hangman">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/animals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_button_background"
                android:onClick="category_selected"
                android:text="@string/categories_animals"
                android:textColor="@color/light_button_text" />

            <Button
                android:id="@+id/fruits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_button_background"
                android:onClick="category_selected"
                android:text="@string/categories_fruits"
                android:textColor="@color/light_button_text" />

            <Button
                android:id="@+id/flowers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_button_background"
                android:onClick="category_selected"
                android:text="@string/categories_flowers"
                android:textColor="@color/light_button_text" />

            <Button
                android:id="@+id/countries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_button_background"
                android:onClick="category_selected"
                android:text="@string/categories_countries"
                android:textColor="@color/light_button_text" />

            <Button
                android:id="@+id/colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_button_background"
                android:onClick="category_selected"
                android:text="@string/categories_colors"
                android:textColor="@color/light_button_text" />

            <Button
                android:id="@+id/random"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_button_background"
                android:text="@string/categories_random"
                android:textColor="@color/light_button_text"
                android:onClick="category_selected" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>