<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register_page">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_username" />

            <EditText
                android:id="@+id/register_username_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_password" />

            <EditText
                android:id="@+id/register_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/register_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/register_password_confirm_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:backgroundTint="@color/light_button_background"
                    android:onClick="login"
                    android:text="@string/login"
                    android:textColor="@color/light_button_text" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/register"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:backgroundTint="@color/light_button_background"
                    app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>